--- a/controle-series/package.json
+++ b/controle-series/package.json
@@ -8,16 +8,21 @@
         "hot": "mix watch --hot",
         "prod": "npm run production",
         "production": "mix --production",
-        "mix": "mix"
+        "mix": "mix",
+        "build": "webpack"
     },
     "devDependencies": {
+        "@tailwindcss/forms": "^0.5.2",
+        "alpinejs": "^3.4.2",
+        "autoprefixer": "^10.4.2",
         "axios": "^0.25",
         "laravel-mix": "^6.0.6",
         "lodash": "^4.17.19",
-        "postcss": "^8.1.14",
+        "postcss": "^8.4.31",
         "resolve-url-loader": "^5.0.0",
         "sass": "^1.49.9",
-        "sass-loader": "^12.6.0"
+        "sass-loader": "^12.6.0",
+        "tailwindcss": "^3.1.0"
     },
     "dependencies": {
         "bootstrap": "^5.3.2"
