--- a/controle-series/package.json
+++ b/controle-series/package.json
@@ -22,7 +22,8 @@
         "resolve-url-loader": "^5.0.0",
         "sass": "^1.49.9",
         "sass-loader": "^12.6.0",
-        "tailwindcss": "^3.1.0"
+        "tailwindcss": "^3.1.0",
+        "vite": "^5.0.11"
     },
     "dependencies": {
         "bootstrap": "^5.3.2"
